# AGENTSH

./: AGENTSH_CHANGES_PROMPT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
install/: install.ps1  install.sh
src/: agent.rs  banner.rs  blocks.rs  config.rs  context.rs  history.rs  lib.rs  llm.rs  llm_setup.rs  main.rs  parser.rs  prompt_ui.rs  repl.rs  safety.rs  shell_rc.rs  spinner.rs  suggest.rs  tools.rs
tests/: agent_integration.rs  parser_tests.rs  safety_tests.rs
